# DocExplain

./: .dockerignore  .env  .gcloudignore  .gitignore  APPLICATION_SPECIFICATION.md  Dockerfile  docker-compose.yml  requirements.txt  sa_key.json  基本設計書.md
.arc/: NYC_TRIPS.txt
.claude/: settings.local.json
Document/: 要件.md  詳細設計書.md
app/: main.py
app/controller/: controller.py
app/domain/: document.py
app/infrastructure/: llm.py  read_file.py  vector_db.py
app/interfaces/: llm_service.py  read_file.py  vector_db_repository.py
app/usecases/: rag_usecase.py  read_file_usecase.py
app/workflows/: rag_workflow.py
chroma_db/: chroma.sqlite3
data/: 要件定義書.md
old/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_api_verification.py
old/.kiro/specs/ai-qa-system/: design.md  requirements.md  tasks.md
old/app/: __init__.py  main.py
old/app/core/: config.py  dependencies.py  vector_db.py
old/app/models/: __init__.py  common.py  document.py  qa.py
old/app/routers/: documents.py  qa.py
old/app/services/: document_service.py  langgraph_workflow.py  qa_service.py  vector_db_service.py
old/tests/: conftest.py  test_document_service.py  test_document_upload.py  test_langgraph_workflow.py  test_main.py  test_models_common.py  test_models_document.py  test_models_qa.py  test_qa_service.py  test_vector_db_manager.py  test_vector_db_service.py
templates/: upload.html
web/: __init__.py  main.py
web/static/: style.css
web/templates/: base.html  error.html  files.html  index.html  result.html
