[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-qa-system"
version = "1.0.0"
description = "AI-powered document Q&A system using LangChain and LangGraph"
authors = [
    {name = "AI QA System Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # FastAPI and web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    
    # Pydantic for data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # LangChain ecosystem
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",
    
    # Vector database and embeddings
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    
    # Document processing
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "python-markdown>=3.5.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true